# elfcore

./: COPYRIGHT  Makefile  README.txt  setup.cfg
elfcore/: core.py  mmap.py  note.py  test.py
