[metadata]
name = elfcore
version = 0.1.0
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Package for generating ARM core files.
long_description = file: README.txt
long_description_content_type = text/plain
keywords = arm core python
url = https://github.com/tgree/elfcore
license = LGPLv2
license-file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
python_requires = >=3.0
packages =
    elfcore
